rabbitmq-server (3.6.0-1) UNRELEASED; urgency=medium

  * [fa2d29e] Update watch file for upstream xz compression.
  * [b008e08] Imported Upstream version 3.6.0.
  * [d0dc477] Update gbp configuration for dch use.

 -- James Page <james.page@ubuntu.com>  Tue, 19 Jan 2016 14:40:40 +0000

rabbitmq-server (3.5.7-1) unstable; urgency=medium

  * New upstream release.

 -- James Page <james.page@ubuntu.com>  Mon, 18 Jan 2016 14:05:40 +0000

rabbitmq-server (3.5.4-3.1) unstable; urgency=medium

  * Non-maintainer upload.
  * Make the default configuration file, which is read unconditionally on
    startup, readable by others. This makes it possible to run rabbitmq-server
    as users other than rabbitmq, e.g. when running test suites as part of
    package builds (Closes: #801917)

 -- Antonio Terceiro <terceiro@debian.org>  Sat, 31 Oct 2015 12:56:15 -0200

rabbitmq-server (3.5.4-3) unstable; urgency=medium

  * Fix /etc/rabbitmq creation (adding -p to mkdir for upgrades). Thanks to
    Frederic Peters for the bug report (Closes: #801088).

 -- Thomas Goirand <zigo@debian.org>  Tue, 06 Oct 2015 14:07:39 +0000

rabbitmq-server (3.5.4-2) unstable; urgency=medium

  * Cosmetic clean-up in debian/rabbitmq-server.postinst and .init.
  * Fix the user / group of /etc/rabbitmq folder and conf files.
  * Also fix user / group of an eventual /etc/rabbitmq/enabled_plugins when
    upgrading the package.

 -- Thomas Goirand <zigo@debian.org>  Mon, 05 Oct 2015 15:47:58 +0200

rabbitmq-server (3.5.4-1) unstable; urgency=medium

  * New upstream release.

 -- James Page <james.page@ubuntu.com>  Tue, 04 Aug 2015 14:52:31 +0200

rabbitmq-server (3.5.1-2) unstable; urgency=medium

  [ Tony Breeds ]
  * systemd: Ensure that rabbitmq has started before marking service as
    running (LP: #1449056).

  [ James Page ]
  * systemd: Drop use of /etc/default/rabbitmq-server.

 -- James Page <james.page@ubuntu.com>  Tue, 02 Jun 2015 11:40:59 +0100
